--- a/wip-portfolio/src/app/globals.css
+++ b/wip-portfolio/src/app/globals.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 
 
 /* :root {
@@ -54,15 +55,15 @@
 }
 
 .mono{
-  font-family: "DM Mono", monospace;
+  font-family: "Cutive Mono", monospace;
   font-weight: 300;
   font-style: normal;
 }
 
 .mono-ital{
-  font-family: "DM Mono", monospace;
+  font-family: "Cutive Mono", monospace;
   font-weight: 700;
-  font-style: italic;
+  font-style: normal;
 }
 
 .sans{
