--- a/wip-portfolio/src/app/globals.css
+++ b/wip-portfolio/src/app/globals.css
@@ -62,7 +62,7 @@
 
 .mono-ital{
   font-family: "Cutive Mono", monospace;
-  font-weight: 700;
+  font-weight: 200;
   font-style: normal;
 }
 
@@ -82,3 +82,6 @@ body {
   font-stretch: condensed;
 }
 
+div::-webkit-scrollbar{
+  display:none;
+}
