--- a/wip-portfolio/src/app/globals.css
+++ b/wip-portfolio/src/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 
 
@@ -19,69 +19,54 @@
   }
 } */
 
+
+/* @font-face {
+  font-family: Fragment Mono;
+  src: url('../../public/FragmentMono-Regular.woff');
+  font-weight: 400;
+  font-style: normal;
+} */
+
 @font-face {
-  font-family: Arial-Narrow;
-  src: url('/../public/Arial\ Narrow.woff');
+  font-family: Fragment Mono;
+  src:url('../../public/FragmentMono-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
+
 @font-face {
-  font-family: Arial_Narrow;
-  src:url('../../public/Arial\ Narrow.woff2') format('woff2');
+  font-family: Fragment Mono Italic;
+  src:url('../../public/FragmentMono-Italic.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
-@font-face {
-  font-family: Arial_Narrow_Italic;
-  src:url('../../public/Arial\ Narrow\ Italic.woff2') format('woff2');
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: Arial_Narrow_Bold;
-  src:url('../../public/Arial\ Narrow\ Bold.woff2') format('woff2');
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Arial_Narrow_Bold_Italic;
-  src:url('../../public/Arial\ Narrow\ Bold\ Italic.woff2') format('woff2');
-  font-weight: 600;
-  font-style: italic;
-}
 
 .mono{
-  font-family: "Cutive Mono", monospace;
+  font-family: "Fragment Mono", monospace;
   font-weight: 300;
   font-style: normal;
 }
 
 .mono-ital{
-  font-family: "Cutive Mono", monospace;
-  font-weight: 200;
+  font-family: "Fragment Mono Italic", monospace;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.sans {
+  font-family: "Fragment Mono", monospace;
+  font-weight: 300;
   font-style: normal;
-}
-
-.sans{
-  font-family: "Arial_Narrow";
-}
-
-.sans-bold{
-  font-family: "Arial_Narrow_Bold";
-}
-
-
-body {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: condensed;
 }
 
 div::-webkit-scrollbar{
   display:none;
+  height: 0;
+  width: 0;
+}
+
+*{
+  text-transform: uppercase;
 }
